#283 - Commit Warnings ausgebessert